[package]
name = "tools"
version = "0.1.0"
edition = "2021"
description = "Piggsoft的工具包"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copy_dir = "0.1.3"
symlink = "0.1.0"
rm_rf = "0.6.2"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
#strum_macros = "0.26.1"
#strum = "0.26.1"