[package]
name = "tools"
version = "0.1.0"
edition = "2021"
description = "Piggsoft的工具包"
license = "Apache-2.0"
documentation = "Piggsoft的工具包"
homepage = "https://github.com/piggsoft/tools"
repository = "https://github.com/piggsoft/tools.git"

[lib]
name = "toolslib"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copy_dir = "0.1.3"
symlink = "0.1.0"
rm_rf = "0.6.2"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
urlencoding = "2.1.3"
base64 = "0.21.7"
#strum_macros = "0.26.1"
#strum = "0.26.1"